z-index fix

--- a/public/css/application.styl
+++ b/public/css/application.styl
@@ -19,7 +19,6 @@ body
 		color #333
 
 #header
-	z-index 100
 	.played
 		background #F60
 		height 5px
