--- a/public/css/bootstrap.styl
+++ b/public/css/bootstrap.styl
@@ -60,6 +60,7 @@ h3
 	background dark
 	height 5px
 	width 100%
+	z-index 100
 
 #header
 	fixed top left
